@@ -206,4 +206,6 @@
 	<string name="select_difficulty">Seleccionar dificultad</string>
 	<string name="generate_sudoku">Generate new game</string>
 	<string name="generating">Generating puzzle...</string>
+    <string name="highlight_similar_cells">Resaltar celdas similares</string>
+	<string name="highlight_similar_cells_summary">Resaltar celdas con valores similares</string>
 </resources>
