@@ -173,4 +173,6 @@
     <string name="set_checkpoint">Kayıt Noktası Oluştur</string>
     <string name="undo_to_checkpoint">Kayıt Noktasına Dön</string>
     <string name="undo_to_checkpoint_confirm">Kayıt noktasına kadar yaptığın hamleleri geri almak istediğine emin misin?</string>
+    <string name="highlight_similar_cells">Highlight similar cells</string>
+    <string name="highlight_similar_cells_summary">Highlight cells with similar values</string>
 </resources>
